@@ -1,3 +1,10 @@
+2008-03-18  Jakub Jelinek  <jakub@redhat.com>
+
+	PR libgomp/35625
+	* iter.c (gomp_iter_guided_next_locked): If q > n, set end to ws->end.
+	(gomp_iter_guided_next): Likewise.
+	* testsuite/libgomp.c/pr35625.c: New test.
+
 2008-03-13  Jakub Jelinek  <jakub@redhat.com>
 
 	PR middle-end/35185
